--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,7 +11,7 @@
          verbose="true"
 >
     <testsuites>
-        <testsuite name="Spatie Test Suite">
+        <testsuite name="ShamarKellman Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
