--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "illuminate/contracts": "^8.0"
+        "illuminate/contracts": "^8.0",
+        "illuminate/support": "^8.0",
+        "illuminate/view": "^8.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
